--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
-    "class-validator": "^0.14.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "cloudinary": "^2.7.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
